Use List/Set.of
Slightly less code and slightly easier to read.