@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021 Christoph Läubrich and others.
+ * Copyright (c) 2021, 2022 Christoph Läubrich and others.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -16,7 +16,7 @@ import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
 import java.io.File;
-import java.util.Arrays;
+import java.util.List;
 
 import org.apache.maven.it.VerificationException;
 import org.apache.maven.it.Verifier;
@@ -28,7 +28,7 @@ public class TestsInBundleTest extends AbstractTychoIntegrationTest {
 	@Test
 	public void testCompile() throws Exception {
 		Verifier verifier = getVerifier("surefire.combinedtests/bundle.test");
-		verifier.executeGoals(Arrays.asList("clean", "test-compile"));
+		verifier.executeGoals(List.of("clean", "test-compile"));
 		verifier.verifyErrorFreeLog();
 		assertTrue("compiled class file does not exist",
 				new File(verifier.getBasedir(), "target/classes/bundle/test/Counter.class").exists());
@@ -39,7 +39,7 @@ public class TestsInBundleTest extends AbstractTychoIntegrationTest {
 	@Test
 	public void testTest() throws Exception {
 		Verifier verifier = getVerifier("surefire.combinedtests/bundle.test");
-		verifier.executeGoals(Arrays.asList("clean", "test"));
+		verifier.executeGoals(List.of("clean", "test"));
 		verifier.verifyErrorFreeLog();
 		assertTrue("tests were not run",
 				new File(verifier.getBasedir(), "target/surefire-reports/bundle.test.AdderTest.txt").exists());
@@ -48,7 +48,7 @@ public class TestsInBundleTest extends AbstractTychoIntegrationTest {
 	@Test
 	public void testIntegrationTest() throws Exception {
 		Verifier verifier = getVerifier("surefire.combinedtests/bundle.test");
-		verifier.executeGoals(Arrays.asList("clean", "integration-test"));
+		verifier.executeGoals(List.of("clean", "integration-test"));
 		verifier.verifyErrorFreeLog();
 		assertTrue("summary report not found",
 				new File(verifier.getBasedir(), "target/failsafe-reports/failsafe-summary.xml").exists());
@@ -60,7 +60,7 @@ public class TestsInBundleTest extends AbstractTychoIntegrationTest {
 	public void testVerify() throws Exception {
 		Verifier verifier = getVerifier("surefire.combinedtests/bundle.test");
 		try {
-			verifier.executeGoals(Arrays.asList("clean", "verify"));
+			verifier.executeGoals(List.of("clean", "verify"));
 			fail("the build succeed but test-failures are expected!");
 		} catch (VerificationException e) {
 			// thats good indeed...
